--- a/dev/index.html
+++ b/dev/index.html
@@ -36,56 +36,52 @@ embryo = construct(Embryo, deepcopy([tissue1, tissue2])) # Make an embryo from T
 Commit 17cfb8e65ea (2023-01-08 06:45 UTC)
 Platform Info:
   OS: Linux (x86_64-linux-gnu)
-  CPU: 2 × Intel(R) Xeon(R) Platinum 8171M CPU @ 2.60GHz
+  CPU: 2 × Intel(R) Xeon(R) CPU E5-2673 v3 @ 2.40GHz
   WORD_SIZE: 64
   LIBM: libopenlibm
-  LLVM: libLLVM-13.0.1 (ORCJIT, skylake-avx512)
+  LLVM: libLLVM-13.0.1 (ORCJIT, haswell)
   Threads: 1 on 2 virtual cores</code></pre></details><details><summary>A more complete overview of all dependencies and their versions is also provided.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl/docs/Manifest.toml`
   [a4c015fc] ANSIColoredPrinters v0.0.1
-  [79e6a3ab] Adapt v3.5.0
+  [79e6a3ab] Adapt v3.6.1
   [ec485272] ArnoldiMethod v0.2.0
-  [4fba245c] ArrayInterface v6.0.25
+  [4fba245c] ArrayInterface v7.2.1
   [30b0a656] ArrayInterfaceCore v0.1.29
-  [6ba088a2] ArrayInterfaceGPUArrays v0.2.2
-  [015c0d05] ArrayInterfaceOffsetArrays v0.1.7
-  [b0d46f97] ArrayInterfaceStaticArrays v0.1.5
-  [dd5226c6] ArrayInterfaceStaticArraysCore v0.1.3
   [62783981] BitTwiddlingConvenienceFunctions v0.1.5
   [2a0fbf3d] CPUSummary v0.2.2
   [49dc2e85] Calculus v0.5.1
   [d360d2e6] ChainRulesCore v1.15.7
-  [9e997f8a] ChangesOfVariables v0.1.5
-  [fb6a15b2] CloseOpenIntervals v0.1.11
+  [9e997f8a] ChangesOfVariables v0.1.6
+  [fb6a15b2] CloseOpenIntervals v0.1.12
   [38540f10] CommonSolve v0.2.3
   [bbf7d656] CommonSubexpressions v0.3.0
-  [34da2185] Compat v4.6.0
-  [187b0558] ConstructionBase v1.4.1
+  [34da2185] Compat v4.6.1
+  [187b0558] ConstructionBase v1.5.1
   [adafc99b] CpuId v0.3.1
   [9a962f9c] DataAPI v1.14.0
   [864edb3b] DataStructures v0.18.13
   [e2d170a0] DataValueInterfaces v1.0.0
   [b429d917] DensityInterface v0.4.0
-  [2b5f629d] DiffEqBase v6.115.4
+  [2b5f629d] DiffEqBase v6.122.1
   [77a26b50] DiffEqNoiseProcess v5.16.0
   [163ba53b] DiffResults v1.1.0
-  [b552c78f] DiffRules v1.12.2
-  [b4f34e82] Distances v0.10.7
-  [31c24e10] Distributions v0.25.80
+  [b552c78f] DiffRules v1.13.0
+  [b4f34e82] Distances v0.10.8
+  [31c24e10] Distributions v0.25.86
   [ffbed154] DocStringExtensions v0.9.3
   [e30172f5] Documenter v0.27.24
   [fa6b7ba4] DualNumbers v0.6.8
   [4e289a0a] EnumX v1.0.4
-  [d4d017d3] ExponentialUtilities v1.22.1
-  [e2ba6199] ExprTools v0.1.8
-  [7034ab61] FastBroadcast v0.2.4
+  [d4d017d3] ExponentialUtilities v1.24.0
+  [e2ba6199] ExprTools v0.1.9
+  [7034ab61] FastBroadcast v0.2.5
   [9aa1b823] FastClosures v0.3.2
-  [29a986be] FastLapackInterface v1.2.8
+  [29a986be] FastLapackInterface v1.2.9
   [1a297f60] FillArrays v0.13.7
-  [6a86dc24] FiniteDiff v2.17.0
-  [f6369f11] ForwardDiff v0.10.34
+  [6a86dc24] FiniteDiff v2.18.0
+  [f6369f11] ForwardDiff v0.10.35
   [069b7b12] FunctionWrappers v1.1.3
-  [77dc65aa] FunctionWrappersWrappers v0.1.1
-  [46192b85] GPUArraysCore v0.1.3
+  [77dc65aa] FunctionWrappersWrappers v0.1.3
+  [46192b85] GPUArraysCore v0.1.4
   [c145ed77] GenericSchur v0.5.3
   [86223c79] Graphs v1.8.0
   [3e5b6fbb] HostCPUFeatures v0.1.14
@@ -94,22 +90,22 @@ Platform Info:
   [615f187c] IfElse v0.1.1
   [d25df0c9] Inflate v0.1.3
   [3587e190] InverseFunctions v0.1.8
-  [92d709cd] IrrationalConstants v0.1.1
+  [92d709cd] IrrationalConstants v0.2.2
   [42fd0dbc] IterativeSolvers v0.9.2
   [82899510] IteratorInterfaceExtensions v1.0.0
   [692b3bcd] JLLWrappers v1.4.1
   [682c06a0] JSON v0.21.3
-  [ccbc3e58] JumpProcesses v9.3.1
+  [ccbc3e58] JumpProcesses v9.5.1
   [ef3ab10e] KLU v0.4.0
   [ba0b0d4f] Krylov v0.9.0
   [0b1a1467] KrylovKit v0.6.0
-  [10f19ff3] LayoutPointers v0.1.13
+  [10f19ff3] LayoutPointers v0.1.14
   [50d2b5c4] Lazy v0.15.1
   [2d8b4e74] LevyArea v1.0.0
   [d3d80556] LineSearches v7.2.0
-  [7ed4a6bd] LinearSolve v1.35.0
-  [2ab3a3ac] LogExpFunctions v0.3.21
-  [bdcacae8] LoopVectorization v0.12.150
+  [7ed4a6bd] LinearSolve v1.38.0
+  [2ab3a3ac] LogExpFunctions v0.3.23
+  [bdcacae8] LoopVectorization v0.12.152
   [1914dd2f] MacroTools v0.5.10
   [d125e4d3] ManualMemory v0.1.8
   [e1d29d7a] Missings v1.1.0
@@ -117,26 +113,26 @@ Platform Info:
   [f9640e96] MultiScaleArrays v1.10.0 `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl`
   [d41bc354] NLSolversBase v7.8.3
   [2774e3e8] NLsolve v4.5.1
-  [77ba4419] NaNMath v1.0.1
-  [8913a72c] NonlinearSolve v1.3.0
+  [77ba4419] NaNMath v1.0.2
+  [8913a72c] NonlinearSolve v1.5.0
   [6fe1bfb0] OffsetArrays v1.12.9
   [429524aa] Optim v1.7.4
   [bac558e1] OrderedCollections v1.4.1
-  [1dea7af3] OrdinaryDiffEq v6.44.0
-  [90014a1f] PDMats v0.11.16
+  [1dea7af3] OrdinaryDiffEq v6.49.1
+  [90014a1f] PDMats v0.11.17
   [d96e819e] Parameters v0.12.3
-  [69de0a69] Parsers v2.5.6
+  [69de0a69] Parsers v2.5.8
   [e409e4f3] PoissonRandom v0.4.3
-  [f517fe37] Polyester v0.7.2
+  [f517fe37] Polyester v0.7.3
   [1d0040c9] PolyesterWeave v0.2.1
   [85a6dd25] PositiveFactorizations v0.2.4
-  [d236fae5] PreallocationTools v0.4.11
+  [d236fae5] PreallocationTools v0.4.12
   [21216c6a] Preferences v1.3.0
-  [1fd47b50] QuadGK v2.8.1
+  [1fd47b50] QuadGK v2.8.2
   [74087812] Random123 v1.6.0
   [e6cf234a] RandomNumbers v1.5.3
   [3cdcf5f2] RecipesBase v1.3.3
-  [731186ca] RecursiveArrayTools v2.37.0
+  [731186ca] RecursiveArrayTools v2.38.0
   [f2c3362d] RecursiveFactorization v0.2.18
   [189a3867] Reexport v1.2.2
   [ae029012] Requires v1.3.0
@@ -145,34 +141,37 @@ Platform Info:
   [7e49a35a] RuntimeGeneratedFunctions v0.5.5
   [94e857df] SIMDTypes v0.1.0
   [476501e8] SLEEFPirates v0.6.38
-  [0bca4576] SciMLBase v1.84.1
+  [0bca4576] SciMLBase v1.91.0
   [e9a6253c] SciMLNLSolve v0.1.3
-  [c0aeaf25] SciMLOperators v0.1.21
+  [c0aeaf25] SciMLOperators v0.2.0
   [efcf1570] Setfield v1.1.1
-  [727e6d20] SimpleNonlinearSolve v0.1.10
+  [727e6d20] SimpleNonlinearSolve v0.1.14
   [699a6c99] SimpleTraits v0.9.4
+  [ce78b400] SimpleUnPack v1.1.0
   [66db9d55] SnoopPrecompile v1.0.3
   [a2af1166] SortingAlgorithms v1.1.0
-  [47a9eef4] SparseDiffTools v1.30.0
+  [47a9eef4] SparseDiffTools v1.31.0
   [e56a9233] Sparspak v0.3.9
-  [276daf66] SpecialFunctions v2.1.7
-  [aedffcd0] Static v0.8.3
-  [90137ffa] StaticArrays v1.5.14
+  [276daf66] SpecialFunctions v2.2.0
+  [aedffcd0] Static v0.8.5
+  [0d7ed370] StaticArrayInterface v1.3.0
+  [90137ffa] StaticArrays v1.5.17
   [1e83bf80] StaticArraysCore v1.4.0
   [82ae8749] StatsAPI v1.5.0
   [2913bbd2] StatsBase v0.33.21
-  [4c63d2b9] StatsFuns v1.1.1
-  [789caeaf] StochasticDiffEq v6.57.5
-  [7792a7ef] StrideArraysCore v0.4.7
-  [2efcf032] SymbolicIndexingInterface v0.2.1
+  [4c63d2b9] StatsFuns v1.3.0
+  [789caeaf] StochasticDiffEq v6.58.0
+  [7792a7ef] StrideArraysCore v0.4.9
+  [2efcf032] SymbolicIndexingInterface v0.2.2
   [3783bdb8] TableTraits v1.0.1
-  [bd369af6] Tables v1.10.0
+  [bd369af6] Tables v1.10.1
   [8290d209] ThreadingUtilities v0.5.1
   [a2a6695c] TreeViews v0.3.0
   [d5829a12] TriangularSolve v0.1.19
   [410a4b4d] Tricks v0.1.6
+  [781d530d] TruncatedStacktraces v1.1.0
   [3a884ed6] UnPack v1.0.2
-  [3d5dd08c] VectorizationBase v0.21.58
+  [3d5dd08c] VectorizationBase v0.21.61
   [19fa3120] VertexSafeGraphs v0.2.0
   [700de1a5] ZygoteRules v0.2.2
   [efe28fd5] OpenSpecFun_jll v0.5.5+0
@@ -223,4 +222,4 @@ Platform Info:
   [8e850ede] nghttp2_jll v1.48.0+0
   [3f19e933] p7zip_jll v17.4.0+0</code></pre></details>You can also download the 
 <a href="https://github.com/SciML/MultiScaleArrays.jl/tree/gh-pages/v1.10.0/assets/Manifest.toml">manifest</a> file and the
-<a href="https://github.com/SciML/MultiScaleArrays.jl/tree/gh-pages/v1.10.0/assets/Project.toml">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="multiscalearray/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.24 on <span class="colophon-date" title="Monday 13 February 2023 20:55">Monday 13 February 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="https://github.com/SciML/MultiScaleArrays.jl/tree/gh-pages/v1.10.0/assets/Project.toml">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="multiscalearray/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.24 on <span class="colophon-date" title="Tuesday 14 March 2023 04:45">Tuesday 14 March 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
