--- a/dev/index.html
+++ b/dev/index.html
@@ -31,147 +31,145 @@ population3 = construct(Population, deepcopy([cell1, cell3, cell4]))
 tissue1 = construct(Tissue, deepcopy([population, population2, population3])) # Make a Tissue from Populations
 tissue2 = construct(Tissue, deepcopy([population2, population, population3]))
 embryo = construct(Embryo, deepcopy([tissue1, tissue2])) # Make an embryo from Tissues</code></pre><h2 id="Idea"><a class="docs-heading-anchor" href="#Idea">Idea</a><a id="Idea-1"></a><a class="docs-heading-anchor-permalink" href="#Idea" title="Permalink"></a></h2><p>The idea behind MultiScaleArrays is simple. The <code>*DiffEq</code> solvers (OrdinaryDiffEq.jl, StochasticDiffEq.jl, DelayDiffEq.jl, etc.) and native optimization packages like Optim.jl in their efficient in-place form all work with any Julia-defined <code>AbstractArray</code> which has a linear index. Thus, to define our multiscale model, we develop a type which has an efficient linear index. One can think of representing cells with proteins as each being an array with values for each protein. The linear index of the multiscale model would be indexing through each protein of each cell. With proper index overloads, one can define a type such that <code>a[i]</code> does just that, and thus it will work in the differential equation solvers. MultiScaleArrays.jl takes that further by allowing one to recursively define an arbitrary <code>n</code>-level hierarchical model which has efficient indexing structures. The result is a type which models complex behavior, but the standard differential equation solvers will work directly and efficiently on this type, making it easy to develop novel models without having to re-develop advanced adaptive/stiff/stochastic/etc. solving techniques for each new model.</p><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li><p>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to SciML.</p></li><li><p>See the <a href="https://github.com/SciML/SciMLStyle">SciML Style Guide</a> for common coding practices and other style decisions.</p></li><li><p>There are a few community forums:</p><ul><li>The #diffeq-bridged and #sciml-bridged channels in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li>The #diffeq-bridged and #sciml-bridged channels in the <a href="https://julialang.zulipchat.com/#narrow/stream/279055-sciml-bridged">Julia Zulip</a></li><li>On the <a href="https://discourse.julialang.org">Julia Discourse forums</a></li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl/docs/Project.toml`
-  [e30172f5] Documenter v0.27.24
-  [f9640e96] MultiScaleArrays v1.10.0 `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.8.5
-Commit 17cfb8e65ea (2023-01-08 06:45 UTC)
+  [e30172f5] Documenter v0.27.25
+  [f9640e96] MultiScaleArrays v1.10.1 `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.9.2
+Commit e4ee485e909 (2023-07-05 09:39 UTC)
 Platform Info:
   OS: Linux (x86_64-linux-gnu)
-  CPU: 2 × Intel(R) Xeon(R) Platinum 8370C CPU @ 2.80GHz
+  CPU: 2 × Intel(R) Xeon(R) Platinum 8272CL CPU @ 2.60GHz
   WORD_SIZE: 64
   LIBM: libopenlibm
-  LLVM: libLLVM-13.0.1 (ORCJIT, icelake-server)
+  LLVM: libLLVM-14.0.6 (ORCJIT, skylake-avx512)
   Threads: 1 on 2 virtual cores</code></pre></details><details><summary>A more complete overview of all dependencies and their versions is also provided.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl/docs/Manifest.toml`
+  [47edcb42] ADTypes v0.1.5
   [a4c015fc] ANSIColoredPrinters v0.0.1
-  [79e6a3ab] Adapt v3.6.1
+  [79e6a3ab] Adapt v3.6.2
   [ec485272] ArnoldiMethod v0.2.0
-  [4fba245c] ArrayInterface v7.2.1
+  [4fba245c] ArrayInterface v7.4.11
   [30b0a656] ArrayInterfaceCore v0.1.29
   [62783981] BitTwiddlingConvenienceFunctions v0.1.5
-  [2a0fbf3d] CPUSummary v0.2.2
+  [2a0fbf3d] CPUSummary v0.2.3
   [49dc2e85] Calculus v0.5.1
-  [d360d2e6] ChainRulesCore v1.15.7
-  [9e997f8a] ChangesOfVariables v0.1.6
+  [d360d2e6] ChainRulesCore v1.16.0
   [fb6a15b2] CloseOpenIntervals v0.1.12
-  [38540f10] CommonSolve v0.2.3
+  [38540f10] CommonSolve v0.2.4
   [bbf7d656] CommonSubexpressions v0.3.0
-  [34da2185] Compat v4.6.1
-  [187b0558] ConstructionBase v1.5.1
+  [34da2185] Compat v4.7.0
+  [187b0558] ConstructionBase v1.5.3
   [adafc99b] CpuId v0.3.1
-  [9a962f9c] DataAPI v1.14.0
-  [864edb3b] DataStructures v0.18.13
+  [9a962f9c] DataAPI v1.15.0
+  [864edb3b] DataStructures v0.18.14
   [e2d170a0] DataValueInterfaces v1.0.0
-  [b429d917] DensityInterface v0.4.0
-  [2b5f629d] DiffEqBase v6.122.1
-  [77a26b50] DiffEqNoiseProcess v5.16.0
+  [2b5f629d] DiffEqBase v6.127.0
+  [77a26b50] DiffEqNoiseProcess v5.17.2
   [163ba53b] DiffResults v1.1.0
-  [b552c78f] DiffRules v1.13.0
+  [b552c78f] DiffRules v1.15.1
   [b4f34e82] Distances v0.10.8
-  [31c24e10] Distributions v0.25.86
+  [31c24e10] Distributions v0.25.98
   [ffbed154] DocStringExtensions v0.9.3
-  [e30172f5] Documenter v0.27.24
+  [e30172f5] Documenter v0.27.25
   [fa6b7ba4] DualNumbers v0.6.8
   [4e289a0a] EnumX v1.0.4
   [d4d017d3] ExponentialUtilities v1.24.0
   [e2ba6199] ExprTools v0.1.9
   [7034ab61] FastBroadcast v0.2.5
   [9aa1b823] FastClosures v0.3.2
-  [29a986be] FastLapackInterface v1.2.9
-  [1a297f60] FillArrays v0.13.9
-  [6a86dc24] FiniteDiff v2.18.0
+  [29a986be] FastLapackInterface v2.0.0
+  [1a297f60] FillArrays v1.4.1
+  [6a86dc24] FiniteDiff v2.21.1
   [f6369f11] ForwardDiff v0.10.35
   [069b7b12] FunctionWrappers v1.1.3
   [77dc65aa] FunctionWrappersWrappers v0.1.3
-  [46192b85] GPUArraysCore v0.1.4
+  [46192b85] GPUArraysCore v0.1.5
   [c145ed77] GenericSchur v0.5.3
   [86223c79] Graphs v1.8.0
-  [3e5b6fbb] HostCPUFeatures v0.1.14
-  [34004b35] HypergeometricFunctions v0.3.11
-  [b5f81e59] IOCapture v0.2.2
+  [3e5b6fbb] HostCPUFeatures v0.1.15
+  [34004b35] HypergeometricFunctions v0.3.21
+  [b5f81e59] IOCapture v0.2.3
   [615f187c] IfElse v0.1.1
   [d25df0c9] Inflate v0.1.3
-  [3587e190] InverseFunctions v0.1.8
   [92d709cd] IrrationalConstants v0.2.2
-  [42fd0dbc] IterativeSolvers v0.9.2
   [82899510] IteratorInterfaceExtensions v1.0.0
   [692b3bcd] JLLWrappers v1.4.1
-  [682c06a0] JSON v0.21.3
-  [ccbc3e58] JumpProcesses v9.6.0
+  [682c06a0] JSON v0.21.4
+  [ccbc3e58] JumpProcesses v9.7.1
   [ef3ab10e] KLU v0.4.0
-  [ba0b0d4f] Krylov v0.9.0
-  [0b1a1467] KrylovKit v0.6.0
+  [ba0b0d4f] Krylov v0.9.2
   [10f19ff3] LayoutPointers v0.1.14
   [50d2b5c4] Lazy v0.15.1
   [2d8b4e74] LevyArea v1.0.0
   [d3d80556] LineSearches v7.2.0
-  [7ed4a6bd] LinearSolve v1.38.0
-  [2ab3a3ac] LogExpFunctions v0.3.23
-  [bdcacae8] LoopVectorization v0.12.152
+  [7ed4a6bd] LinearSolve v2.4.1
+  [2ab3a3ac] LogExpFunctions v0.3.24
+  [bdcacae8] LoopVectorization v0.12.163
   [1914dd2f] MacroTools v0.5.10
   [d125e4d3] ManualMemory v0.1.8
   [e1d29d7a] Missings v1.1.0
   [46d2c3a1] MuladdMacro v0.2.4
-  [f9640e96] MultiScaleArrays v1.10.0 `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl`
+  [f9640e96] MultiScaleArrays v1.10.1 `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl`
   [d41bc354] NLSolversBase v7.8.3
   [2774e3e8] NLsolve v4.5.1
   [77ba4419] NaNMath v1.0.2
-  [8913a72c] NonlinearSolve v1.5.0
-  [6fe1bfb0] OffsetArrays v1.12.9
-  [429524aa] Optim v1.7.4
-  [bac558e1] OrderedCollections v1.4.1
-  [1dea7af3] OrdinaryDiffEq v6.49.3
+  [8913a72c] NonlinearSolve v1.8.0
+  [6fe1bfb0] OffsetArrays v1.12.10
+  [429524aa] Optim v1.7.6
+  [bac558e1] OrderedCollections v1.6.0
+  [1dea7af3] OrdinaryDiffEq v6.53.3
   [90014a1f] PDMats v0.11.17
+  [65ce6f38] PackageExtensionCompat v1.0.0
   [d96e819e] Parameters v0.12.3
-  [69de0a69] Parsers v2.5.8
+  [69de0a69] Parsers v2.7.1
   [e409e4f3] PoissonRandom v0.4.4
   [f517fe37] Polyester v0.7.3
   [1d0040c9] PolyesterWeave v0.2.1
   [85a6dd25] PositiveFactorizations v0.2.4
   [d236fae5] PreallocationTools v0.4.12
-  [21216c6a] Preferences v1.3.0
+  [aea7be01] PrecompileTools v1.1.2
+  [21216c6a] Preferences v1.4.0
   [1fd47b50] QuadGK v2.8.2
-  [74087812] Random123 v1.6.0
+  [74087812] Random123 v1.6.1
   [e6cf234a] RandomNumbers v1.5.3
-  [3cdcf5f2] RecipesBase v1.3.3
-  [731186ca] RecursiveArrayTools v2.38.0
+  [3cdcf5f2] RecipesBase v1.3.4
+  [731186ca] RecursiveArrayTools v2.38.7
   [f2c3362d] RecursiveFactorization v0.2.18
   [189a3867] Reexport v1.2.2
   [ae029012] Requires v1.3.0
   [ae5879a3] ResettableStacks v1.1.1
   [79098fc4] Rmath v0.7.1
-  [7e49a35a] RuntimeGeneratedFunctions v0.5.5
+  [7e49a35a] RuntimeGeneratedFunctions v0.5.11
   [94e857df] SIMDTypes v0.1.0
-  [476501e8] SLEEFPirates v0.6.38
-  [0bca4576] SciMLBase v1.91.1
-  [e9a6253c] SciMLNLSolve v0.1.3
-  [c0aeaf25] SciMLOperators v0.2.0
+  [476501e8] SLEEFPirates v0.6.39
+  [0bca4576] SciMLBase v1.93.3
+  [e9a6253c] SciMLNLSolve v0.1.8
+  [c0aeaf25] SciMLOperators v0.3.4
   [efcf1570] Setfield v1.1.1
-  [727e6d20] SimpleNonlinearSolve v0.1.14
+  [727e6d20] SimpleNonlinearSolve v0.1.17
   [699a6c99] SimpleTraits v0.9.4
   [ce78b400] SimpleUnPack v1.1.0
   [66db9d55] SnoopPrecompile v1.0.3
-  [a2af1166] SortingAlgorithms v1.1.0
-  [47a9eef4] SparseDiffTools v1.31.0
+  [a2af1166] SortingAlgorithms v1.1.1
+  [47a9eef4] SparseDiffTools v2.4.1
   [e56a9233] Sparspak v0.3.9
-  [276daf66] SpecialFunctions v2.2.0
-  [aedffcd0] Static v0.8.6
-  [0d7ed370] StaticArrayInterface v1.3.0
-  [90137ffa] StaticArrays v1.5.18
-  [1e83bf80] StaticArraysCore v1.4.0
-  [82ae8749] StatsAPI v1.5.0
-  [2913bbd2] StatsBase v0.33.21
+  [276daf66] SpecialFunctions v2.3.0
+  [aedffcd0] Static v0.8.7
+  [0d7ed370] StaticArrayInterface v1.4.0
+  [90137ffa] StaticArrays v1.6.1
+  [1e83bf80] StaticArraysCore v1.4.2
+  [82ae8749] StatsAPI v1.6.0
+  [2913bbd2] StatsBase v0.34.0
   [4c63d2b9] StatsFuns v1.3.0
-  [789caeaf] StochasticDiffEq v6.60.0
-  [7792a7ef] StrideArraysCore v0.4.9
+  [789caeaf] StochasticDiffEq v6.61.1
+  [7792a7ef] StrideArraysCore v0.4.17
   [2efcf032] SymbolicIndexingInterface v0.2.2
   [3783bdb8] TableTraits v1.0.1
   [bd369af6] Tables v1.10.1
-  [8290d209] ThreadingUtilities v0.5.1
+  [8290d209] ThreadingUtilities v0.5.2
   [a2a6695c] TreeViews v0.3.0
   [d5829a12] TriangularSolve v0.1.19
-  [410a4b4d] Tricks v0.1.6
-  [781d530d] TruncatedStacktraces v1.2.0
+  [410a4b4d] Tricks v0.1.7
+  [781d530d] TruncatedStacktraces v1.4.0
   [3a884ed6] UnPack v1.0.2
-  [3d5dd08c] VectorizationBase v0.21.61
+  [3d5dd08c] VectorizationBase v0.21.64
   [19fa3120] VertexSafeGraphs v0.2.0
   [700de1a5] ZygoteRules v0.2.3
   [efe28fd5] OpenSpecFun_jll v0.5.5+0
@@ -193,7 +191,7 @@ Platform Info:
   [d6f4376e] Markdown
   [a63ad114] Mmap
   [ca575930] NetworkOptions v1.2.0
-  [44cfe95a] Pkg v1.8.0
+  [44cfe95a] Pkg v1.9.2
   [de0858da] Printf
   [3fa0cd96] REPL
   [9a3f8284] Random
@@ -202,24 +200,24 @@ Platform Info:
   [1a1011a3] SharedArrays
   [6462fe0b] Sockets
   [2f01184e] SparseArrays
-  [10745b16] Statistics
+  [10745b16] Statistics v1.9.0
   [4607b0f0] SuiteSparse
-  [fa267f1f] TOML v1.0.0
-  [a4e569a6] Tar v1.10.1
+  [fa267f1f] TOML v1.0.3
+  [a4e569a6] Tar v1.10.0
   [8dfed614] Test
   [cf7118a7] UUIDs
   [4ec0a83e] Unicode
-  [e66e0078] CompilerSupportLibraries_jll v1.0.1+0
+  [e66e0078] CompilerSupportLibraries_jll v1.0.5+0
   [deac9b47] LibCURL_jll v7.84.0+0
   [29816b5a] LibSSH2_jll v1.10.2+0
-  [c8ffd9c3] MbedTLS_jll v2.28.0+0
-  [14a3606d] MozillaCACerts_jll v2022.2.1
-  [4536629a] OpenBLAS_jll v0.3.20+0
+  [c8ffd9c3] MbedTLS_jll v2.28.2+0
+  [14a3606d] MozillaCACerts_jll v2022.10.11
+  [4536629a] OpenBLAS_jll v0.3.21+4
   [05823500] OpenLibm_jll v0.8.1+0
-  [bea87d4a] SuiteSparse_jll v5.10.1+0
-  [83775a58] Zlib_jll v1.2.12+3
-  [8e850b90] libblastrampoline_jll v5.1.1+0
+  [bea87d4a] SuiteSparse_jll v5.10.1+6
+  [83775a58] Zlib_jll v1.2.13+0
+  [8e850b90] libblastrampoline_jll v5.8.0+0
   [8e850ede] nghttp2_jll v1.48.0+0
   [3f19e933] p7zip_jll v17.4.0+0</code></pre></details>You can also download the 
-<a href="https://github.com/SciML/MultiScaleArrays.jl/tree/gh-pages/v1.10.0/assets/Manifest.toml">manifest</a> file and the
-<a href="https://github.com/SciML/MultiScaleArrays.jl/tree/gh-pages/v1.10.0/assets/Project.toml">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="multiscalearray/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.24 on <span class="colophon-date" title="Wednesday 22 March 2023 17:48">Wednesday 22 March 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="https://github.com/SciML/MultiScaleArrays.jl/tree/gh-pages/v1.10.1/assets/Manifest.toml">manifest</a> file and the
+<a href="https://github.com/SciML/MultiScaleArrays.jl/tree/gh-pages/v1.10.1/assets/Project.toml">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="multiscalearray/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Tuesday 18 July 2023 20:32">Tuesday 18 July 2023</span>. Using Julia version 1.9.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
